# CMoDS

./: .gitignore  pyproject.toml
Lab-1/: main.py
Lab-2/: main.py
Lab-3/: main.py
