[tool.poetry]
name = "theomech"
version = "0.1.0"
description = ""
authors = ["proksima <konstant.2015b@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.13.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pyqt5 = "^5.15.11"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
